monitoring/cert-manager-metrics-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: cert-manager-metrics-nodeport
  namespace: cert-manager
  labels:
    app: cert-manager
    purpose: external-prometheus-scrape
spec:
  type: NodePort
  selector:
    app.kubernetes.io/component: controller
    app.kubernetes.io/instance: cert-manager
    app.kubernetes.io/name: cert-manager
  ports:
    - name: tcp-prometheus
      port: 9402
      targetPort: 9402
      nodePort: 30962
