monitoring/longhorn-metrics-nodeport.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: longhorn-metrics-nodeport
  namespace: longhorn-system
  labels:
    app: longhorn-manager
    purpose: external-prometheus-scrape
spec:
  type: NodePort
  selector:
    app: longhorn-manager
  ports:
    - name: manager
      port: 9500
      targetPort: manager
      nodePort: 30963
